# packed_algebraic_types

./: CMakeLists.txt  README.md  doxyfile.in  test.cpp.in
doc/: main.md
include/: packer.hpp  safe_int.hpp
test/: CMakeLists.txt  packer.cpp  safe_int_operators.cpp
